fixed dark mode body color in mobile

--- a/src/SCSS/_card.scss
+++ b/src/SCSS/_card.scss
@@ -11,6 +11,11 @@
     background-color: $button-color-hover-light;
   }
 }
+#card-row {
+  &.dark-body {
+    background-color: $background-color-body-dark;
+  }
+}
 
 #card-title {
   margin-bottom: 24px;
