--- a/src/SCSS/main.css
+++ b/src/SCSS/main.css
@@ -44,6 +44,10 @@
   background-color: #05668d;
 }
 
+#card-row.dark-body {
+  background-color: #028090;
+}
+
 #card-title {
   margin-bottom: 24px;
 }
